// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`query documents > Q_AGENT_EXPANSION is unchanged 1`] = `
"query SidekickAiAgentExpansion($quick: Boolean, $first: Int, $after: String, $query: GraphEntityQueryInput, $projectId: String) {
  graphSearch(
    quick: $quick
    first: $first
    after: $after
    query: $query
    projectId: $projectId
  ) {
    pageInfo { hasNextPage endCursor }
    nodes {
      entities {
        id
        name
        type
        properties
      }
    }
  }
}
"
`;

exports[`query documents > Q_AGENT_SENSITIVE_DATA_ACCESS is unchanged 1`] = `
"query SidekickAiAgentSensitiveDataAccess($quick: Boolean, $first: Int, $after: String, $query: GraphEntityQueryInput, $projectId: String) {
  graphSearch(
    quick: $quick
    first: $first
    after: $after
    query: $query
    projectId: $projectId
  ) {
    totalCount
    pageInfo { hasNextPage endCursor }
    nodes {
      entities {
        id
        name
        type
        properties
      }
    }
  }
}
"
`;

exports[`query documents > Q_AGENTS_NO_GUARDRAIL is unchanged 1`] = `
"query SidekickAiAgentsWithoutGuardrail($quick: Boolean, $first: Int, $after: String, $query: GraphEntityQueryInput, $projectId: String) {
  graphSearch(
    quick: $quick
    first: $first
    after: $after
    query: $query
    projectId: $projectId
  ) {
    totalCount
    pageInfo { hasNextPage endCursor }
    nodes {
      entities {
        id
        name
        type
        properties
      }
    }
  }
}
"
`;

exports[`query documents > Q_AI_EXPOSURE is unchanged 1`] = `
"query SidekickAiExposure($query: GraphEntityQueryInput, $controlId: ID, $projectId: String, $first: Int, $after: String, $fetchTotalCount: Boolean = false, $quick: Boolean = true, $fetchPublicExposurePaths: Boolean = false, $fetchInternalExposurePaths: Boolean = false, $fetchIssueAnalytics: Boolean = false, $fetchThreatAnalytics: Boolean = false, $fetchLateralMovement: Boolean = false, $fetchCodeSource: Boolean = false, $fetchKubernetes: Boolean = false, $fetchCost: Boolean = false, $issueId: ID) {
  graphSearch(
    query: $query
    controlId: $controlId
    projectId: $projectId
    first: $first
    after: $after
    quick: $quick
    issueId: $issueId
  ) {
    totalCount @include(if: $fetchTotalCount)
    maxCountReached @include(if: $fetchTotalCount)
    pageInfo { endCursor hasNextPage }
    nodes {
      entities {
        providerUniqueId
        deletedAt
        isRestricted
        ...PathGraphEntityFragment
        userMetadata { isInWatchlist isIgnored note }
        technologies { id icon }
        cost(
          filterBy: {timestamp: {inLast: {amount: 30, unit: DurationFilterValueUnitDays}}}
        ) @include(if: $fetchCost) {
          amortized
          blended
          unblended
          netAmortized
          netUnblended
          currencyCode
        }
        costImpact @include(if: $fetchCost) { monthly }
        publicExposures(first: 10) @include(if: $fetchPublicExposurePaths) {
          nodes { ...NetworkExposureFragment }
        }
        otherSubscriptionExposures(first: 10) @include(if: $fetchInternalExposurePaths) {
          nodes { ...NetworkExposureFragment }
        }
        otherVnetExposures(first: 10) @include(if: $fetchInternalExposurePaths) {
          nodes { ...NetworkExposureFragment }
        }
        lateralMovementPaths(first: 10) @include(if: $fetchLateralMovement) {
          nodes {
            id
            pathEntities { entity { providerUniqueId ...PathGraphEntityFragment } }
          }
        }
        codeSourcePath(first: 10) @include(if: $fetchCodeSource) {
          totalCount
          nodes {
            id
            pathEntities { providerUniqueId ...PathGraphEntityFragment }
          }
        }
        kubernetesPaths(first: 10) @include(if: $fetchKubernetes) {
          nodes { id path { providerUniqueId ...PathGraphEntityFragment } }
        }
      }
      aggregateCount
    }
  }
}

fragment PathGraphEntityFragment on GraphEntity {
  providerUniqueId
  id
  name
  type
  properties
  typedProperties { ... on GEAiAgent { description } }
  issueAnalytics: issues(
    filterBy: {status: [IN_PROGRESS, OPEN], type: [TOXIC_COMBINATION, CLOUD_CONFIGURATION]}
  ) @include(if: $fetchIssueAnalytics) {
    highSeverityCount
    criticalSeverityCount
  }
  threatAnalytics: issues(
    filterBy: {status: [IN_PROGRESS, OPEN], type: [THREAT_DETECTION], createdAt: {inLast: {amount: 7, unit: DurationFilterValueUnitDays}}}
  ) @include(if: $fetchThreatAnalytics) {
    highSeverityCount
    criticalSeverityCount
  }
}

fragment NetworkExposureFragment on NetworkExposure {
  id
  portRange
  sourceIpRange
  destinationIpRange
  path { providerUniqueId ...PathGraphEntityFragment }
  applicationEndpoints { providerUniqueId ...PathGraphEntityFragment }
}
"
`;

exports[`query documents > Q_AI_INVENTORY is unchanged 1`] = `
"query SidekickAiInventory($first: Int, $after: String, $filterBy: CloudResourceV2Filters) {
  cloudResourcesV2(first: $first, after: $after, filterBy: $filterBy) {
    totalCount
    pageInfo { hasNextPage endCursor }
    nodes {
      id
      name
      type
      nativeType
      cloudPlatform
      region
      status
      firstSeen
      lastSeen
      externalId
      isAccessibleFromInternet
      isOpenToAllInternet
      hasSensitiveData
      hasAccessToSensitiveData
      hasAdminPrivileges
      hasHighPrivileges
      technology { id name categories { id name } }
      cloudAccount { id name externalId cloudProvider }
      projects { id name isFolder riskProfile { businessImpact } }
      tags { key value }
    }
  }
}
"
`;

exports[`query documents > Q_CONFIG_FINDINGS is unchanged 1`] = `
"query SidekickAiConfigFindings($first: Int, $after: String, $filterBy: ConfigurationFindingFilters, $orderBy: ConfigurationFindingOrder) {
  configurationFindings(first: $first, after: $after, filterBy: $filterBy, orderBy: $orderBy) {
    totalCount
    pageInfo { hasNextPage endCursor }
    nodes {
      id
      name
      deleted
      analyzedAt
      firstSeenAt
      severity
      result
      status
      remediation
      source
      targetExternalId
      ignoreRules { id tags { key value } }
      subscription {
        id
        name
        externalId
        cloudProvider
        sourceDeployments { id name status }
      }
      resource {
        id
        name
        type
        status
        projects { id name riskProfile { businessImpact } }
      }
      sourceMappedIacFindings { id name }
      rule {
        id
        shortId
        graphId
        name
        description
        remediationInstructions
        risks
        threats
        tags { key value }
        opaPolicy
      }
    }
  }
}
"
`;

exports[`query documents > Q_ISSUES is unchanged 1`] = `
"query SidekickAiIssues($first: Int, $after: String, $filterBy: IssueFilters, $orderBy: IssueOrder) {
  issuesV2(first: $first, after: $after, filterBy: $filterBy, orderBy: $orderBy) {
    totalCount
    pageInfo { hasNextPage endCursor }
    nodes {
      id
      type
      severity
      status
      createdAt
      updatedAt
      dueAt
      resolvedAt
      resolutionReason
      resolutionNote
      rejectionExpiredAt
      validatedAsExploitable
      environments
      assignee { id name primaryEmail }
      resolvedBy { user { id name email } serviceAccount { id name type } }
      notes { id text }
      serviceTickets { id externalId name url }
      applicationServices { id displayName }
      aiRemediationAnalysis { verdict recommendedSeverity }
      projects { id name slug riskProfile { businessImpact } }
      entitySnapshot {
        id
        type
        status
        name
        cloudPlatform
        region
        subscriptionName
        subscriptionId
        subscriptionExternalId
        nativeType
        externalId
        tags
        kubernetesClusterName
        kubernetesNamespaceName
        resourceGroupId
      }
      sourceRules {
        ... on Control {
          id
          name
          description
          severity
          risks
          threats
          resolutionRecommendation
        }
        ... on CloudConfigurationRule {
          id
          name
          description
          risks
          threats
          control { resolutionRecommendation severity }
        }
        ... on CloudEventRule {
          id
          name
          description
          risks
          threats
        }
      }
    }
  }
}
"
`;

exports[`query documents > Q_PRINCIPALS is unchanged 1`] = `
"query SidekickAiPrincipals($first: Int, $after: String, $filterBy: CloudResourceV2Filters, $orderBy: CloudResourceOrder) {
  cloudResourcesV2(first: $first, after: $after, filterBy: $filterBy, orderBy: $orderBy) {
    totalCount
    pageInfo { hasNextPage endCursor }
    nodes {
      id
      name
      type
      nativeType
      hasSensitiveData
      hasAccessToSensitiveData
      hasAdminPrivileges
      hasHighPrivileges
      technology { id name categories { id name } }
      cloudAccount { id name externalId cloudProvider }
      projects { id name riskProfile { businessImpact } }
      graphEntity { properties }
      issueAnalytics {
        issueCount
        informationalSeverityCount
        lowSeverityCount
        mediumSeverityCount
        highSeverityCount
        criticalSeverityCount
      }
    }
  }
}
"
`;

exports[`query documents > Q_VULN_FINDINGS is unchanged 1`] = `
"query SidekickAiVulnFindings($first: Int, $after: String, $filterBy: VulnerabilityFindingFilters) {
  vulnerabilityFindings(first: $first, after: $after, filterBy: $filterBy) {
    totalCount
    pageInfo { hasNextPage endCursor }
    nodes {
      id
      name
      status
      severity
      hasExploit
      hasCisaKevExploit
      epssProbability
      epssPercentile
      epssSeverity
      firstDetectedAt
      resolvedAt
      relatedIssues { id }
      vulnerableAsset {
        ... on VulnerableAssetBase { id type name }
        ... on VulnerableAssetVirtualMachine { id type name }
        ... on VulnerableAssetServerless { id type name }
        ... on VulnerableAssetContainerImage { id type name }
        ... on VulnerableAssetContainer { id type name }
        ... on VulnerableAssetRepositoryBranch { id type name }
        ... on VulnerableAssetIde { id type name }
        ... on VulnerableAssetEndpoint { id type name }
        ... on VulnerableAssetPaaSResource { id type name }
        ... on VulnerableAssetVirtualMachineImage { id type name }
        ... on VulnerableAssetCommon { id type name }
        ... on VulnerableAssetDevice { id type name }
        ... on VulnerableAssetNetworkAddress { __typename }
      }
    }
  }
}
"
`;
